tests/programs/errors/duplicate_param.tiny
fn foo(x: int, x: int) -> int { return x; }
print(foo(1, 2));
