tests/programs/errors/duplicate_param.expected
Error: duplicate parameter name 'x' (line 1)

1 error(s)
